Re-jigged benchmark to more closely relate to use case. Add a call stack to the benchmark allowing the C1/C2 method optimisation to be inlined to caller.