@@ -1,6 +1,7 @@
 package io.vertx.ext.web.impl;
 
-import java.util.List;
+import java.util.HashMap;
+import java.util.Map;
 import java.util.concurrent.TimeUnit;
 
 import org.openjdk.jmh.annotations.Benchmark;
@@ -15,35 +16,56 @@ import org.openjdk.jmh.annotations.State;
 import org.openjdk.jmh.annotations.Threads;
 import org.openjdk.jmh.annotations.Warmup;
 
-import io.vertx.ext.web.ParsedHeaderValue;
-
 @Warmup(iterations = 20, time = 1, timeUnit = TimeUnit.SECONDS)
 @Measurement(iterations = 10, time = 2, timeUnit = TimeUnit.SECONDS)
 @Threads(1)
 @BenchmarkMode(Mode.Throughput)
 @OutputTimeUnit(TimeUnit.MILLISECONDS)
 @Fork(value = 1, jvmArgs = {
-    "-XX:+UseBiasedLocking",
-    "-XX:BiasedLockingStartupDelay=0",
 })
 @State(Scope.Thread)
 public class HeaderParserBenchmark {
 
   @Benchmark
   public void baseline() throws Exception {
-    consume(HeaderParser.convertToParsedHeaderValues(EMPTY, ParsableHeaderValue::new));
+    consume(fillParsedHeaders(baselineheaders));
   }
 
   @Benchmark
   public void plaintext() throws Exception{
-    consume(HeaderParser.convertToParsedHeaderValues(PLAINTEXT, ParsableHeaderValue::new));
+     consume(fillParsedHeaders(plaintextheaders));
   }
 
   @CompilerControl(CompilerControl.Mode.DONT_INLINE)
-  public static void consume(List<ParsedHeaderValue> parts) {
+  public static void consume(ParsableHeaderValuesContainer container) {
   }
 
-  private static final String EMPTY = "";
-  private static final String PLAINTEXT = "text/plain";
+  private ParsableHeaderValuesContainer fillParsedHeaders(Map<String, String> h) {
+    String accept = h.get("Accept");
+    String acceptCharset = h.get ("Accept-Charset");
+    String acceptEncoding = h.get("Accept-Encoding");
+    String acceptLanguage = h.get("Accept-Language");
+    String contentType = ensureNotNull(h.get("Content-Type"));
 
+    parsedHeaders = new ParsableHeaderValuesContainer(
+        HeaderParser.sort(HeaderParser.convertToParsedHeaderValues(accept, ParsableMIMEValue::new)),
+        HeaderParser.sort(HeaderParser.convertToParsedHeaderValues(acceptCharset, ParsableHeaderValue::new)),
+        HeaderParser.sort(HeaderParser.convertToParsedHeaderValues(acceptEncoding, ParsableHeaderValue::new)),
+        HeaderParser.sort(HeaderParser.convertToParsedHeaderValues(acceptLanguage, ParsableLanguageValue::new)),
+        new ParsableMIMEValue(contentType)
+    );
+    return parsedHeaders;
+  }
+
+  private String ensureNotNull(String string){
+     return string == null ? "" : string;
+   }
+
+  private static final Map<String, String> baselineheaders = new HashMap<String, String>();
+  private static final Map<String, String> plaintextheaders = new HashMap<String, String>();
+  private ParsableHeaderValuesContainer parsedHeaders;
+
+  static {
+    plaintextheaders.put("Accept", "text/plain");
+  }
 }
